# OS2

./: CMakeLists.txt  Main.cpp  OS2.cpp  OS2.h  OS2_WithTests.sln  OS2_WithTests.vcxproj  OS2_WithTests.vcxproj.filters  README.md  tests.cpp
OS2_WithTests/x64/Debug/: OS2_WithTests.exe.recipe  OS2_WithTests.vcxproj.FileListAbsolute.txt  vc143.idb
OS2_WithTests/x64/Debug/OS2_WithTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  OS2_WithTests.lastbuildstate  link.secondary.1.tlog
